Mirror reflect Face textures shader more bright #46144

Closed
opened 2015-09-17 13:52:07 +02:00 by dono dono · 11 comments

System Information
Windows 7

Blender Version
Blender 2.75a

Short description of error
The mirror reflect the face textures shader more bright than original. It works with a shader with no face textures.

Exact steps for others to reproduce the error
http://www.pasteall.org/blend/38067
Shift+Z !

Thanks a lot !

**System Information** Windows 7 **Blender Version** Blender 2.75a **Short description of error** The mirror reflect the face textures shader more bright than original. It works with a shader with no face textures. **Exact steps for others to reproduce the error** http://www.pasteall.org/blend/38067 Shift+Z ! Thanks a lot !
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ParrotDenis

Added subscriber: @ParrotDenis

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @ChingPingSun

Added subscriber: @ChingPingSun

This comment was removed by @ChingPingSun

*This comment was removed by @ChingPingSun*
Author

Hello,

It seems to come from the color management. In fact, the reflect is good in linear but not in sRGB. So it isreally a bug in the case of sRGB.

Thanks !

Hello, It seems to come from **the color management**. In fact, the reflect is good in linear but not in sRGB. So it is**really a bug** in the case of sRGB. Thanks !

This issue was referenced by 196d26fb14

This issue was referenced by 196d26fb1404f580766bf7743c8e5298d5651492

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for tracking this down to the precise cause.

Fixed now, thanks for tracking this down to the precise cause.
Author

Thanks a lot Brecht ! :)

Thanks a lot Brecht ! :)
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#46144
No description provided.