Fix T46144: blender internal face texture color wrong in raytraced reflection.